--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<form action="" method="post">
+<form method="post">
     {% csrf_token %}
     <div class="flex justify-center items-center h-screen bg-gray-300">
         <div class="w-1/3  p-5 shadow-lg bg-white rounded-md">
