--- a/administration/templates/edit_voters.html
+++ b/administration/templates/edit_voters.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'root.html' %}
 
 
 {% block content %}
@@ -6,7 +6,7 @@
 <div class="container pt-1">
     <div class="col-lg-6 mx-auto shadow p-0">
         <div class="alert alert-success p-4 text-center"> 
-            <h2>Add Position</h2>
+            <h2>Edit Voter</h2>
         </div>
     
         <div class="p-2 text-bold">
@@ -20,7 +20,7 @@
                     <br>
                 {% endfor %}               
                 
-                <input class="btn btn-info" type="submit" value="Add Task">
+                <input class="btn btn-info" type="submit" value="Edit Voter">
             </form>
         </div>
     
