--- a/administration/templates/home.html
+++ b/administration/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "root.html" %}
 
 {% block content %}
 <h1 class="text-center text-3xl">this is our home page</h1>
