--- a/administration/templates/position.html
+++ b/administration/templates/position.html
@@ -1,13 +1,11 @@
-{% extends "base.html" %}
+{% extends "root.html" %}
  {% block content %}
 
-    <div class=" container pt-5 ">
-        <div class="col-lg-12 mx-auto shadow text-white">
-            <div class="pt-0 text-white">
-                <h1 class="text-center bg-info text-white">Positions</h1>
+        <div class="col-lg-12 mx-auto shadow text-black">
+                <h1 class="text-center bg-info text-black">Positions</h1>
                 <div class="p-4">                  
 
-                    {% if positions %}
+                {% if positions %}
                     <table class="table table-bordered pl-3">
                         <thead>
                             <tr>
@@ -30,12 +28,11 @@
                         </thead>                            
                     </table>
                     {% else %}
-                    <h1>There is no data available</h1>                
-                </div>
-                {% endif %}
+                    <h1>There is no data available</h1>   
+                    
+                {% endif %}                    
             </div>
         </div>
-    </div>
 
 {% endblock content %} 
 
