--- a/administration/templates/add_position.html
+++ b/administration/templates/add_position.html
@@ -4,27 +4,28 @@
 {% block content %}
 
 <div class="container pt-1">
-    <div class="col-lg-6 mx-auto shadow p-0">
-        <div class="alert alert-success p-4 text-center"> 
-            <h2>Add Position</h2>
+    <div class="col-lg-6 mx-auto shadow p-4">
+        <div class="bg-green-500 text-white p-4 text-center rounded-t-lg">
+            <h2 class="text-2xl font-bold">Add Position</h2>
         </div>
     
-        <div class="p-2 text-bold">
-            <form action="" method="POST">
-                {% csrf_token %} 
-
+        <div class="p-2 font-bold">
+            <form action="" method="POST" class="max-w-md mx-auto p-4 bg-white shadow-md rounded-lg">
+                {% csrf_token %}
+            
                 {% for fm in form %}
-                    <p class="fw-bold mb-0">{{fm.label_tag}}</p>
-                    {{fm}}
-                    
-                    <br>
-                {% endfor %}               
-                
-                <input class="btn btn-info" type="submit" value="Add Position">
+                <div class="mb-4">
+                    <label for="{{ fm.id_for_label }}" class="block font-bold text-gray-700 mb-2">{{ fm.label_tag }}</label>
+                    {{ fm }}
+                </div>
+                {% endfor %}
+            
+                <button type="submit" class="btn bg-blue-500 text-white py-2 px-4 rounded-full">Add Position</button>
             </form>
+            
         </div>
-    
     </div>
+    
 </div>
 
 
