--- a/administration/templates/edit_voters.html
+++ b/administration/templates/edit_voters.html
@@ -5,8 +5,8 @@
 
 <div class="container pt-1">
     <div class="col-lg-6 mx-auto shadow p-0">
-        <div class="alert alert-success p-4 text-center"> 
-            <h2>Edit Voter</h2>
+        <div class="bg-green-500 text-white p-4 text-center rounded-t-lg">
+            <h2 class="text-2xl font-bold">Edit Voter</h2>
         </div>
     
         <div class="p-2 text-bold">
