--- a/administration/templates/voters.html
+++ b/administration/templates/voters.html
@@ -2,26 +2,26 @@
  {% block content %}
 
         <div class="col-lg-12 mx-auto shadow text-black">
-                <h1 class="text-center bg-info text-black">Voters</h1>
-                <div class="p-4">                  
+            <div class="bg-green-500 text-white p-4 text-center rounded-t-lg">
+                <h2 class="text-2xl font-bold">Voters</h2>
+            </div>                <div class="p-4">                  
 
                 {% if voters %}
-                    <table class="table table-bordered pl-3">
-                        <thead>
+                <table class="min-w-full border border-gray-300">
+                    <thead>
                             <tr>
-                                <th scope="col">User Name</th>
-                                <th scope="col">Email</th>
-                                <th scope="col">Voted</th>
-                                <th scope="col">Action</th>
+                                <th scope="py-2 px-4 bg-gray-100">Username</th>
+                                <th scope="py-2 px-4 bg-gray-100">Email</th>
+                                <th scope="py-2 px-4 bg-gray-100">Action</th>
                             </tr>
                         </thead>
                         <thead>
-                            {% for pos in positions %}
+                            {% for vo in voters %}
                             <tr>
-                                <td scope="col">{{pos.username}}</td>
-                                <td scope="col">{{pos.email}}</td>
-                                <td scope="col">{{pos.voted}}</td>
-                                <td> <a class="btn btn-primary btn-sm" href="{% url 'edit_voter' id=pos.id %}">Edit</a> <a class="btn btn-danger btn-sm" href="{% url 'delete_voter' id=pos.id %}">Delete</a></td>
+                                <td class="py-2 px-4 text-center">{{vo.username}}</td>
+                                <td class="py-2 px-4 text-center">{{vo.email}}</td>
+                                <td class="py-2 px-4 text-center"> <a class="text-white bg-blue-500 hover:bg-blue-700 py-1 px-2 rounded" href="{% url 'edit_voter' id=vo.id %}">Edit</a>
+                                     <a class="text-white bg-red-500 hover:bg-red-700 py-1 px-2 rounded" href="{% url 'delete_voter' id=vo.id %}">Delete</a></td>
                                 
                             </tr>
                             {% endfor %}
@@ -35,24 +35,3 @@
         </div>
 
 {% endblock content %} 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
