--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -34,11 +34,10 @@
 
             </div>
             <div class="mt-1">
-                <button type="submit"
-                    class="rounded-sm border-2 border-indigo-500 bg-indigo-500  text-white py-2 w-full">Register</button>
+                <button type="submit" class="rounded-sm border-2 border-green-500 bg-green-500 text-white py-2 w-full">Register</button>
             </div>
-            <p class="mt-2">Already have an account? Please <a href="{% url 'login' %}"
-                    class="text-indigo-700 underline">Login</a></p>
+            <p class="mt-2">Already have an account? Please <a href="{% url 'login' %}" class="text-green-500 underline">Login</a></p>
+            
         </div>
     </div>
 </form>
