--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -25,11 +25,10 @@
                     id="password" name="password">
             </div>
             <div class="mt-2">
-                <button type="submit"
-                    class="rounded-sm border-2 border-indigo-500 bg-indigo-500 text-white py-2 w-full">Login</button>
+                <button type="submit" class="rounded-sm border-2 border-green-500 bg-green-500 text-white py-2 w-full">Login</button>
             </div>
-            <p class="mt-2">Don't have an account? Please <a href="{% url 'register' %}"
-                    class="text-indigo-500 underline">Register</a></p>
+            <p class="mt-2">Don't have an account? Please <a href="{% url 'register' %}" class="text-green-500 underline">Register</a></p>
+            
         </div>
     </div>
 </form>
