--- a/administration/templates/home.html
+++ b/administration/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "root.html" %}
 
 {% block content %}
-<h1 class="text-center text-3xl">this is our home page</h1>
+<h1 class="text-center text-3xl">Voters home page</h1>
 {% endblock content %}
