--- a/administration/templates/dashboard.html
+++ b/administration/templates/dashboard.html
@@ -1,206 +1,80 @@
 {% extends "root.html" %}
 {% block content %}
-
-<!-- SIDEBAR -->
-<section id="sidebar">
-    <a href="#" class="brand"><i class='bx bxs-smile icon'></i> AdminSite</a>
-    <ul class="side-menu">
-        <li><a href="#" class="active"><i class='bx bxs-dashboard icon' ></i> Dashboard</a></li>
-        <li class="divider" data-text="main">Main</li>
-        <li>
-            <a href="#"><i class='bx bxs-inbox icon' ></i> Elements <i class='bx bx-chevron-right icon-right' ></i></a>
-            <ul class="side-dropdown">
-                <li><a href="#">Alert</a></li>
-                <li><a href="#">Badges</a></li>
-                <li><a href="#">Breadcrumbs</a></li>
-                <li><a href="#">Button</a></li>
-            </ul>
-        </li>
-        <li><a href="#"><i class='bx bxs-chart icon' ></i> Charts</a></li>
-        <li><a href="#"><i class='bx bxs-widget icon' ></i> Widgets</a></li>
-        <li class="divider" data-text="table and forms">Table and forms</li>
-        <li><a href="#"><i class='bx bx-table icon' ></i> Tables</a></li>
-        <li>
-            <a href="#"><i class='bx bxs-notepad icon' ></i> Forms <i class='bx bx-chevron-right icon-right' ></i></a>
-            <ul class="side-dropdown">
-                <li><a href="#">Basic</a></li>
-                <li><a href="#">Select</a></li>
-                <li><a href="#">Checkbox</a></li>
-                <li><a href="#">Radio</a></li>
-            </ul>
-        </li>
-    </ul>
-    <div class="ads">
-        <div class="wrapper">
-            <a href="#" class="btn-upgrade">Upgrade</a>
-            <p>Become a <span>PRO</span> member and enjoy <span>All Features</span></p>
+<div>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
+        <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
+            <div class="flex justify-between mb-6">
+                <div>
+                    <div class="text-2xl font-semibold mb-1">{{positions | length}}</div>
+                    <div class="text-lg font-medium text-gray-600">No. of Positions</div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
+            <div class="flex justify-between mb-6">
+                <div>
+                    <div class="text-2xl font-semibold mb-1">5</div>
+                    <div class="text-lg font-medium text-gray-600">No. of Candidates</div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
+            <div class="flex justify-between mb-6">
+                <div>
+                    <div class="text-2xl font-semibold mb-1">{{voters | length}}</div>
+                    <div class="text-lg font-medium text-gray-600">Total Voter</div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
+            <div class="flex justify-between mb-6">
+                <div>
+                    <div class="text-2xl font-semibold mb-1">5</div>
+                    <div class="text-lg font-medium text-gray-600">Voters Voted</div>
+                </div>
+            </div>
         </div>
     </div>
-</section>
-<!-- SIDEBAR -->
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
+        <div class="bg-white border border-gray-100 shadow-md shadow-black/5 p-6 rounded-md">
+            <div class="flex justify-between mb-4 items-start">
+                <div class="font-medium">President</div>
+            </div>
+            <div class="overflow-x-auto">
+                <div class="w-full min-w-[540px]">
 
-<!-- NAVBAR -->
-<section id="content">
-    <!-- NAVBAR -->
-    <nav>
-        <i class='bx bx-menu toggle-sidebar' ></i>
-        <form action="#">
-            <div class="form-group">
-                <input type="text" placeholder="Search...">
-                <i class='bx bx-search icon' ></i>
-            </div>
-        </form>
-        <a href="#" class="nav-link">
-            <i class='bx bxs-bell icon' ></i>
-            <span class="badge">5</span>
-        </a>
-        <a href="#" class="nav-link">
-            <i class='bx bxs-message-square-dots icon' ></i>
-            <span class="badge">8</span>
-        </a>
-        <span class="divider"></span>
-        <div class="profile">
-            <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGVvcGxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
-            <ul class="profile-link">
-                <li><a href="#"><i class='bx bxs-user-circle icon' ></i> Profile</a></li>
-                <li><a href="#"><i class='bx bxs-cog' ></i> Settings</a></li>
-                <li><a href="#"><i class='bx bxs-log-out-circle' ></i> Logout</a></li>
-            </ul>
-        </div>
-    </nav>
-    <!-- NAVBAR -->
-
-    <!-- MAIN -->
-    <main>
-        <h1 class="title">Dashboard</h1>
-        <ul class="breadcrumbs">
-            <li><a href="#">Home</a></li>
-            <li class="divider">/</li>
-            <li><a href="#" class="active">Dashboard</a></li>
-        </ul>
-        <div class="info-data">
-            <div class="card">
-                <div class="head">
-                    <div>
-                        <h2>1500</h2>
-                        <p>Traffic</p>
-                    </div>
-                    <i class='bx bx-trending-up icon' ></i>
                 </div>
-                <span class="progress" data-value="40%"></span>
-                <span class="label">40%</span>
-            </div>
-            <div class="card">
-                <div class="head">
-                    <div>
-                        <h2>234</h2>
-                        <p>Sales</p>
-                    </div>
-                    <i class='bx bx-trending-down icon down' ></i>
-                </div>
-                <span class="progress" data-value="60%"></span>
-                <span class="label">60%</span>
-            </div>
-            <div class="card">
-                <div class="head">
-                    <div>
-                        <h2>465</h2>
-                        <p>Pageviews</p>
-                    </div>
-                    <i class='bx bx-trending-up icon' ></i>
-                </div>
-                <span class="progress" data-value="30%"></span>
-                <span class="label">30%</span>
-            </div>
-            <div class="card">
-                <div class="head">
-                    <div>
-                        <h2>235</h2>
-                        <p>Visitors</p>
-                    </div>
-                    <i class='bx bx-trending-up icon' ></i>
-                </div>
-                <span class="progress" data-value="80%"></span>
-                <span class="label">80%</span>
             </div>
         </div>
-        <div class="data">
-            <div class="content-data">
-                <div class="head">
-                    <h3>Sales Report</h3>
-                    <div class="menu">
-                        <i class='bx bx-dots-horizontal-rounded icon'></i>
-                        <ul class="menu-link">
-                            <li><a href="#">Edit</a></li>
-                            <li><a href="#">Save</a></li>
-                            <li><a href="#">Remove</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="chart">
-                    <div id="chart"></div>
-                </div>
+        <div class="bg-white border border-gray-100 shadow-md shadow-black/5 p-6 rounded-md">
+            <div class="flex justify-between mb-4 items-start">
+                <div class="font-medium">Chairman</div>
+
             </div>
-            <div class="content-data">
-                <div class="head">
-                    <h3>Chatbox</h3>
-                    <div class="menu">
-                        <i class='bx bx-dots-horizontal-rounded icon'></i>
-                        <ul class="menu-link">
-                            <li><a href="#">Edit</a></li>
-                            <li><a href="#">Save</a></li>
-                            <li><a href="#">Remove</a></li>
-                        </ul>
-                    </div>
+            <div class="overflow-x-auto">
+                <div class="w-full min-w-[540px]">
+                    <canvas id="pie-chart"></canvas>
                 </div>
-                <div class="chat-box">
-                    <p class="day"><span>Today</span></p>
-                    <div class="msg">
-                        <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGVvcGxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
-                        <div class="chat">
-                            <div class="profile">
-                                <span class="username">Alan</span>
-                                <span class="time">18:30</span>
-                            </div>
-                            <p>Hello</p>
-                        </div>
-                    </div>
-                    <div class="msg me">
-                        <div class="chat">
-                            <div class="profile">
-                                <span class="time">18:30</span>
-                            </div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptatum eos quam dolores eligendi exercitationem animi nobis reprehenderit laborum! Nulla.</p>
-                        </div>
-                    </div>
-                    <div class="msg me">
-                        <div class="chat">
-                            <div class="profile">
-                                <span class="time">18:30</span>
-                            </div>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, architecto!</p>
-                        </div>
-                    </div>
-                    <div class="msg me">
-                        <div class="chat">
-                            <div class="profile">
-                                <span class="time">18:30</span>
-                            </div>
-                            <p>Lorem ipsum, dolor sit amet.</p>
-                        </div>
-                    </div>
-                </div>
-                <form action="#">
-                    <div class="form-group">
-                        <input type="text" placeholder="Type...">
-                        <button type="submit" class="btn-send"><i class='bx bxs-send' ></i></button>
-                    </div>
-                </form>
             </div>
         </div>
-    </main>
-    <!-- MAIN -->
-</section>
-<!-- NAVBAR -->
-
+    </div>
+</div>
+<div class="grid grid-cols-1 lg:grid-cols-3 gap-6 mb-6">
+    <div class="bg-white border border-gray-100 shadow-md shadow-black/5 p-6 rounded-md lg:col-span-2">
+        <div class="flex justify-between mb-4 items-start">
+            <div class="font-medium">Statistics</div>
+        </div>
+        <div>
+            <canvas id="order-chart"></canvas>
+        </div>
+    </div>
+    <div class="bg-white border border-gray-100 shadow-md shadow-black/5 p-6 rounded-md">
+        <div class="flex justify-between mb-4 items-start">
+            <div class="font-medium">Vice</div>
+        </div>
+        <div class="overflow-x-auto">
+            <div class="w-full min-w-[460px]"></div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
