implement crud for candidate

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="text-white">
                     <div class="flex gap-[20px]">
-                        <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="">Home</a>
+                        <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
                         <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="">About</a>
                         <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'login' %}">Login</a>
                         <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'register' %}">Register</a>
@@ -40,7 +40,7 @@
                         </p>
                     </div>
                     <div>
-                        <button class="border-2 border-xl rounded-3xl p-2 text-md">Get Started</button>
+                        <a href="{% url 'position' %}" class="border-2 border-xl rounded-3xl p-2 text-md hover:border-green-400 hover:text-white">Get Started</a>
                     </div>
                 </div>
     
