--- a/administration/templates/create_candidate.html
+++ b/administration/templates/create_candidate.html
@@ -1,16 +1,15 @@
 {% extends 'root.html' %}
 
-
 {% block content %}
 
 <div class="container pt-1">
     <div class="col-lg-6 mx-auto shadow p-4">
         <div class="bg-green-500 text-white p-4 text-center rounded-t-lg">
-            <h2 class="text-2xl font-bold">Add Position</h2>
+            <h2 class="text-2xl font-bold">Add Candidate</h2>
         </div>
     
         <div class="p-2 font-bold">
-            <form action="" method="POST" class="max-w-md mx-auto p-4 bg-white shadow-md rounded-lg">
+            <form action="{% url 'candidate' %}" method="POST" class="max-w-md mx-auto p-4 bg-white shadow-md rounded-lg">
                 {% csrf_token %}
             
                 {% for fm in form %}
@@ -20,7 +19,7 @@
                 </div>
                 {% endfor %}
             
-                <button type="submit" class="btn bg-blue-500 text-white py-2 px-4 rounded-5xl">Add Position</button>
+                <button type="submit" class="btn bg-blue-500 text-white py-2 px-4 rounded-full">Add Candidate</button>
             </form>
             
         </div>
