--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -15,6 +15,8 @@
       <li><a href="{% url 'add_position' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-file-text"></i> Add Positions</a></li>
     
       <li><a href="{% url 'voters' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-tasks"></i> Voters</a></li>
+
+      <li><a href="{% url 'candidate' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-tasks"></i> Candidate</a></li>
     
       {% endif %}
         
