--- a/administration/templates/voters.html
+++ b/administration/templates/voters.html
@@ -20,8 +20,10 @@
                             <tr>
                                 <td class="py-2 px-4 text-center">{{vo.username}}</td>
                                 <td class="py-2 px-4 text-center">{{vo.email}}</td>
-                                <td class="py-2 px-4 text-center"> <a class="text-white bg-blue-500 hover:bg-blue-700 py-1 px-2 rounded" href="{% url 'edit_voter' id=vo.id %}">Edit</a>
-                                     <a class="text-white bg-red-500 hover:bg-red-700 py-1 px-2 rounded" href="{% url 'delete_voter' id=vo.id %}">Delete</a></td>
+                                <td class="py-2 px-4 text-center"> 
+                                    <a class="text-white bg-blue-500 hover:bg-blue-700 py-1 px-2 rounded" href="{% url 'edit_voter' id=vo.id %}">Edit</a>
+                                    <a class="text-white bg-red-500 hover:bg-red-700 py-1 px-2 rounded" href="{% url 'delete_voter' id=vo.id %}">Delete</a>
+                                </td>
                                 
                             </tr>
                             {% endfor %}
