--- a/administration/templates/candidate.html
+++ b/administration/templates/candidate.html
@@ -2,7 +2,7 @@
  {% block content %}
 
         <div class="col-lg-12 mx-auto shadow text-black">
-            <a href="{% url 'add_candidate' %}">Add Candidate</a>
+            <a href="{% url 'create_candidate' %}">Add Candidate</a>
 
             <div class="bg-green-500 text-white p-4 text-center rounded-t-lg">
                 <h2 class="text-2xl font-bold">Candidate</h2>                
