--- a/administration/templates/create_candidate.html
+++ b/administration/templates/create_candidate.html
@@ -9,7 +9,7 @@
         </div>
     
         <div class="p-2 font-bold">
-            <form action="{% url 'candidate' %}" method="POST" class="max-w-md mx-auto p-4 bg-white shadow-md rounded-lg">
+            <form action="{% url 'candidate' %}" method="POST" enctype="multipart/form-data" class="max-w-md mx-auto p-4 bg-white shadow-md rounded-lg">
                 {% csrf_token %}
             
                 {% for fm in form %}
