--- a/administration/templates/candidate.html
+++ b/administration/templates/candidate.html
@@ -21,16 +21,19 @@
                         </thead>
                         <tbody>
                             {% for candidate in candidates %}
-                            <tr>
-                                <td class="py-2 px-4 text-center">{{ candidate.fullname }}</td>
-                                <td class="py-2 px-4 text-center">{{ candidate.bio }}</td>
-                                <td class="py-2 px-4 text-center">{{ candidate.position }}</td>
-                                <td class="py-2 px-4 text-center">{{ candidate.photo }}</td>
-                                <td class="py-2 px-4 text-center">
-                                    <a href="{% url 'edit_candidate' id=candidate.id %}" class="text-white bg-blue-500 hover:bg-blue-700 py-1 px-2 rounded">Edit</a>
-                                    <a href="{% url 'delete_candidate' id=candidate.id %}" class="text-white bg-red-500 hover:bg-red-700 py-1 px-2 rounded">Delete</a>
-                                </td>
-                            </tr>
+                                <tr>
+                                    <td class="py-2 px-4 text-center">{{ candidate.fullname }}</td>
+                                    <td class="py-2 px-4 text-center">{{ candidate.bio }}</td>
+                                    <td class="py-2 px-4 text-center">{{ candidate.position }}</td>
+                                    <td>
+                                        <img class="h-16 w-16" src="/media/{{ candidate.photo }}" alt="Avatar">
+                                    </td>                                 
+                                    
+                                    <td class="py-2 px-4 text-center">
+                                        <a href="{% url 'edit_candidate' id=candidate.id %}" class="text-white bg-blue-500 hover:bg-blue-700 py-1 px-2 rounded">Edit</a>
+                                        <a href="{% url 'delete_candidate' id=candidate.id %}" class="text-white bg-red-500 hover:bg-red-700 py-1 px-2 rounded">Delete</a>
+                                    </td>
+                                </tr>
                             {% endfor %}
                         </tbody>
                         
