--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -1,4 +1,4 @@
-<aside class="main-sidebar">
+<aside class="main-sidebar bg-gray-900">
   <!-- sidebar: style can be found in sidebar.less -->
   <section class="sidebar">
     <!-- Sidebar user panel -->
