--- a/administration/templates/create_candidate.html
+++ b/administration/templates/create_candidate.html
@@ -7,25 +7,20 @@
         <div class="bg-green-500 text-white p-4 text-center rounded-t-lg">
             <h2 class="text-2xl font-bold">Add Candidate</h2>
         </div>
-    
         <div class="p-2 font-bold">
-            <form action="{% url 'candidate' %}" method="POST" enctype="multipart/form-data" class="max-w-md mx-auto p-4 bg-white shadow-md rounded-lg">
+            <form method="POST" enctype="multipart/form-data"
+                class="max-w-md mx-auto p-4 bg-white shadow-md rounded-lg">
                 {% csrf_token %}
-            
                 {% for fm in form %}
                 <div class="mb-4">
-                    <label for="{{ fm.id_for_label }}" class="block font-bold text-gray-700 mb-2">{{ fm.label_tag }}</label>
+                    <label for="{{ fm.id_for_label }}" class="block font-bold text-gray-700 mb-2">
+                        {{ fm.label_tag }}</label>
                     {{ fm }}
                 </div>
                 {% endfor %}
-            
                 <button type="submit" class="btn bg-blue-500 text-white py-2 px-4 rounded-full">Add Candidate</button>
             </form>
-            
         </div>
     </div>
-    
 </div>
-
-
 {% endblock %}
