--- a/administration/templates/root.html
+++ b/administration/templates/root.html
@@ -6,8 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DACSU</title>
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-
+  <!-- for icons  -->
+  <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 </head>
+
 <body class="flex flex-col min-h-screen">
   <!-- Include Navbar -->
 
@@ -17,7 +19,7 @@
   <!-- Sidebar and Content -->
   <div class="flex flex-row flex-1">
     <!-- Include Sidebar -->
-    
+
     {% include "sidebar.html" %}
     <!-- Content Area -->
     <div class="flex flex-col flex-1 p-4">
@@ -25,11 +27,11 @@
       <div class="bg-white p-4 rounded shadow">
         <!-- Block-specific content goes here -->
         {% block content %}
-        
+
         {% endblock content %}
       </div>
     </div>
-  {% endif %}
+    {% endif %}
 
   </div>
 
