--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -6,27 +6,37 @@
     <!-- sidebar menu: style can be found in sidebar.less -->
     <ul class="mt-4 space-y-2">
       {% if request.user.username == 'admin' %}
-    
+
       <!-- <li class="text-green-500 font-bold py-2 px-4">REPORTS</li> -->
 
-      <!-- <li><a href="#" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-lock"></i> Votes</a></li> --> 
-    <li><a href="{% url 'dashboard' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-dashboard"></i> Dashboard</a></li>
-     
-      <li><a href="{% url 'position' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-tasks"></i> Positions</a></li>
-    
-      <li><a href="{% url 'add_position' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-file-text"></i> Add Positions</a></li>
-    
-      <li><a href="{% url 'voters' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-tasks"></i> Voters</a></li>
+      <!-- <li><a href="#" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-lock"></i> Votes</a></li> -->
+      <li><a href="{% url 'dashboard' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
+            class="fa fa-dashboard"></i> Dashboard</a></li>
 
-      <li><a href="{% url 'candidate' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-tasks"></i> Candidate</a></li>
-    
+      <li><a href="{% url 'position' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
+            class="fa fa-tasks"></i> Positions</a></li>
+
+      <li><a href="{% url 'add_position' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
+            class="fa fa-file-text"></i> Add Positions</a></li>
+
+      <li><a href="{% url 'voters' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
+            class="fa fa-tasks"></i> Voters</a></li>
+
+      <li><a href="{% url 'create_candidate' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
+            class="fa fa-tasks"></i> Add Candidate</a></li>
+
+      <li><a href="{% url 'candidate' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
+            class="fa fa-tasks"></i> Candidate</a></li>
+
       {% endif %}
-        
+
       <!-- Add hover effect for EXIT and Logout (if needed) -->
-       <li><a href="{% url 'myprofile' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-dashboard"></i> <span>My profile</span></a></li>
-      <li><a href="{% url 'logout' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-power-off"></i> <span>Logout</span></a></li> 
+      <li><a href="{% url 'myprofile' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
+            class="fa fa-dashboard"></i> <span>My profile</span></a></li>
+      <li><a href="{% url 'logout' %}" class="text-green-500 block py-2 px-4 hover:bg-green-200 font-bold"><i
+            class="fa fa-power-off"></i> <span>Logout</span></a></li>
     </ul>
-    
+
   </section>
   <!-- /.sidebar -->
 </aside>
