--- a/administration/templates/dashboard.html
+++ b/administration/templates/dashboard.html
@@ -13,7 +13,7 @@
         <div class="bg-white rounded-md border border-gray-100 p-4 shadow-md shadow-black/5">
             <div class="flex justify-between mb-6">
                 <div>
-                    <div class="text-2xl font-semibold mb-1">5</div>
+                    <div class="text-2xl font-semibold mb-1">{{candidates | length}}</div>
                     <div class="text-lg font-medium text-gray-600">No. of Candidates</div>
                 </div>
             </div>
