--- a/administration/templates/navbar.html
+++ b/administration/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="flex items-center justify-between flex-wrap bg-white p-6 px-10">
+<nav class="flex items-center justify-between flex-wrap bg-white px-10">
   <div class="flex items-center flex-shrink-0 text-white mr-6">
     <h1 class="text-5xl font-bold w-[150px]">DUCSU</h1>
   </div>
