--- a/administration/templates/add_position.html
+++ b/administration/templates/add_position.html
@@ -3,8 +3,6 @@
 
 {% block content %}
 
-<div class="container pt-1">
-    <div class="col-lg-6 mx-auto shadow p-4">
         <div class="bg-green-500 text-white p-4 text-center rounded-t-lg">
             <h2 class="text-2xl font-bold">Add Position</h2>
         </div>
@@ -15,18 +13,14 @@
             
                 {% for fm in form %}
                 <div class="mb-4">
-                    <label for="{{ fm.id_for_label }}" class="block font-bold text-gray-700 mb-2">{{ fm.label_tag }}</label>
+                    <label for="{{ fm.id_for_label }}" class="block font-bold text-green-700 mb-2">{{ fm.label_tag }}</label>
                     {{ fm }}
                 </div>
                 {% endfor %}
             
-                <button type="submit" class="btn bg-blue-500 text-white py-2 px-4 rounded-5xl">Add Position</button>
+                <button type="submit" class="btn bg-green-600 hover:bg-green-400 text-white font-bold py-2 px-4 rounded-full">Add Position</button>
             </form>
             
         </div>
-    </div>
-    
-</div>
-
 
 {% endblock %}
