--- a/administration/templates/candidate.html
+++ b/administration/templates/candidate.html
@@ -29,8 +29,8 @@
                         </div>
                     </td>
                     <td class="py-2 px-4 text-center">
-                        <a href="{% url 'edit_candidate' id=candidate.id %}"><box-icon name='edit'></box-icon></a>
-                        <a href="{% url 'delete_candidate' id=candidate.id %}"><box-icon name='minus'></box-icon></a>
+                        <a  class="text-white bg-blue-500 hover:bg-blue-700 py-2 px-2" href="{% url 'edit_candidate' id=candidate.id %}"><box-icon name='edit'></box-icon></a>
+                        <a  class="text-white bg-red-500 hover:bg-red-700 py-2 px-2" href="{% url 'delete_candidate' id=candidate.id %}"><box-icon name='minus'></box-icon></a>
                     </td>
                 </tr>
                 {% endfor %}
