api_issue_solved

--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+
+{% block head_title %} DUCSU | Register{% endblock %}
+
 {% block content %}
 <form method="post">
     {% csrf_token %}
