--- a/administration/templates/create_candidate.html
+++ b/administration/templates/create_candidate.html
@@ -1,5 +1,7 @@
 {% extends 'root.html' %}
 
+{% block head_title %} DUCSU | Add Candidate{% endblock %}
+
 {% block content %}
 
         <div class="bg-green-500 text-white p-2 text-center rounded-t-lg">
