--- a/administration/templates/dashboard.html
+++ b/administration/templates/dashboard.html
@@ -1,4 +1,6 @@
 {% extends "root.html" %}
+
+{% block head_title %} DUCSU | Admin Dashboard{% endblock %}
 {% block content %}
 <div>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
