--- a/administration/templates/position.html
+++ b/administration/templates/position.html
@@ -1,4 +1,6 @@
 {% extends "root.html" %}
+
+{% block head_title %} DUCSU | Positions{% endblock %}
 {% block content %}
 
 <div class="col-lg-12 mx-auto shadow text-black">
