--- a/voting/templates/ballot.html
+++ b/voting/templates/ballot.html
@@ -1,4 +1,6 @@
 {% extends 'root.html' %}
+
+{% block head_title %} DUCSU | Show Ballot{% endblock %} 
 {% block content %}
 
 <div class="col-sm-10 col-sm-offset-1">
