--- a/administration/templates/candidate.html
+++ b/administration/templates/candidate.html
@@ -1,9 +1,11 @@
 {% extends "root.html" %}
+{% block head_title %} DUCSU | Candidates{% endblock %} 
+
 {% block content %}
 
 <div class="col-lg-12 mx-auto shadow text-black">
     <div class="bg-green-500 text-white p-4 text-center rounded-t-lg">
-        <h2 class="text-2xl font-bold">Candidate</h2>
+        <h2 class="text-2xl font-bold">Candidates</h2>
     </div>
     <div class="p-4">
         {% if candidates %}
@@ -11,8 +13,8 @@
             <thead>
                 <tr>
                     <th class="py-2 px-4 bg-gray-100">Full Name</th>
-                    <th class="py-2 px-4 bg-gray-100">Bio-data</th>
                     <th class="py-2 px-4 bg-gray-100">Position</th>
+                    <th class="py-2 px-4 bg-gray-100">Bio-data</th>
                     <th class="py-2 px-4 bg-gray-100">Picture</th>
                     <th class="py-2 px-4 bg-gray-100">Action</th>
                 </tr>
@@ -21,8 +23,8 @@
                 {% for candidate in candidates %}
                 <tr>
                     <td class="py-2 px-4 text-center">{{ candidate.fullname }}</td>
-                    <td class="py-2 px-4 text-center">{{ candidate.bio }}</td>
                     <td class="py-2 px-4 text-center">{{ candidate.position }}</td>
+                    <td class="py-2 px-4 text-center">{{ candidate.bio }}</td>
                     <td class="py-2 px-4 flex justify-end">
                         <div class="border-2 shadow-sm">
                             <img src="{{ candidate.photo.url }}" class="w-16 h-16 p-1" alt="">
