--- a/administration/templates/navbar.html
+++ b/administration/templates/navbar.html
@@ -1,30 +1,29 @@
-<nav class="flex items-center justify-between flex-wrap bg-white px-10">
-  <div class="flex items-center flex-shrink-0 text-white mr-6">
-    <h1 class="text-5xl font-bold w-[150px]">DUCSU</h1>
+{% load  static %}
+
+<nav class="flex items-center justify-between bg-white px-10 m-4">
+  <div class="flex justify-between items-center w-full">
+
+    <!-- Logo on the left side -->
+    <div class="relative">
+        <img class="h-15 w-40" src="{% static 'images/logo_t.png' %}" alt="Logo">
+    </div>
+
+    <!-- Navigation and user info on the right side -->
+    <div class="flex items-center ml-auto">
+
+        {% if request.user.is_authenticated %}
+        <div class="text-green-600 my-auto font-black px-5">Welcome, {{ request.user.username }}</div>
+
+        <a href="{% url 'home' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0 mr-2">Home</a>
+
+        <a href="{% url 'logout' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0">Logout</a>
+        {% else %}
+        <a href="{% url 'home' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0 mr-2">Home</a>
+
+        <a href="{% url 'login' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0">Login</a>
+
+        <a href="{% url 'register' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-green-600 hover:bg-white mt-4 lg:mt-0">Register</a>
+        {% endif %}
+    </div>
   </div>
-  <div class="w-full lg:flex lg:items-center lg:w-auto px-10">
-    <div class="flex w-auto justify-start items-center">
-
-
-
-      {% if request.user.is_authenticated %}
-      <div class="text-green-600 my-auto font-black px-5">Welcome, {{ request.user.username }}</div>
-      
-      <a href="{% url 'home' %}"class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0">Home</a>
-  
-      <a href="{% url 'logout' %}" class="mx-2 inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0">Logout</a>
-    </div>
-    {% else %}
-    <div class="text-md lg:flex-grow"></div>
-    <div class="mr-2">
-      <a class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0" href="{% url 'home' %}">Home</a>
-
-      <a href="{% url 'login' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-white hover:bg-red-700 mt-4 lg:mt-0">Login</a>
-    </div>
-    <div>
-      <a href="{% url 'register' %}" class="inline-block font-medium text-sm px-4 py-2 leading-none bg-green-600 rounded text-white border-white hover:border-transparent hover:text-green-600 hover:bg-white mt-4 lg:mt-0">Register</a>
-    </div>
-    {% endif %}
-  </div>
-  
 </nav>
