--- a/administration/templates/voters_home.html
+++ b/administration/templates/voters_home.html
@@ -1,5 +1,8 @@
 {% extends "root.html" %}
 
+
+{% block head_title %} DUCSU | Voter Dashboard{% endblock %}
+
 {% block content %}
 <h1 class="text-center text-3xl">Voters home page</h1>
 {% endblock content %}
