--- a/voting/templates/result.html
+++ b/voting/templates/result.html
@@ -1,4 +1,8 @@
-{% extends 'root.html' %} {% block content %}
+{% extends 'root.html' %} 
+
+{% block head_title %} DUCSU | My Votes{% endblock %} 
+
+{% block content %}
 
   <div class="text-center">
     <h3>You have already voted for this election!</h3>
