--- a/administration/templates/candidate.html
+++ b/administration/templates/candidate.html
@@ -23,7 +23,7 @@
                     <td class="py-2 px-4 text-center">{{ candidate.fullname }}</td>
                     <td class="py-2 px-4 text-center">{{ candidate.bio }}</td>
                     <td class="py-2 px-4 text-center">{{ candidate.position }}</td>
-                    <td class="py-2 px-4 flex justify-end">
+                    <td class="py-2 px-4 flex justify-center">
                         <div class="border-2 shadow-sm">
                             <img src="{{ candidate.photo.url }}" class="w-16 h-16 p-1" alt="">
                         </div>
