--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -14,9 +14,7 @@
                   <li><a href="{% url 'dashboard' %}"
                               class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold">
                               <i class='bx bxs-dashboard'></i> Dashboard</a></li>
-                  <li><a href="{% url 'voterDashboard' %}"
-                              class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
-                                    class="fa fa-dashboard"></i>Voter Dashboard</a></li>
+
                   <li><a href="{% url 'position' %}"
                               class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
                                     class="fa fa-tasks"></i> Positions</a></li>
@@ -36,6 +34,13 @@
                   <li><a href="{% url 'create_candidate' %}"
                               class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
                                     class="fa fa-tasks"></i> Add Candidate</a></li>
+                  {% else %}
+                  <li><a href="{% url 'voterDashboard' %}"
+                              class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
+                                    class="fa fa-dashboard"></i>Voter Dashboard</a></li>
+                  <li><a href="{% url 'show_ballot' %}"
+                              class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
+                                    class="fa fa-dashboard"></i> <span>Show Ballot</span></a></li>
                   {% endif %}
                   <hr>
                   <li><a href="{% url 'myprofile' %}"
