--- a/templates/home.html
+++ b/templates/home.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/v4-shims.min.js" integrity="sha512-6n3X18GAJomziz6HVPbmyBOEZeoB8+unwEBTRXFs3IZTRYYCkbXNAWNV68uHujamEvDBqaGe2FTW19o81h1/RA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/v4-shims.min.js"
+        integrity="sha512-6n3X18GAJomziz6HVPbmyBOEZeoB8+unwEBTRXFs3IZTRYYCkbXNAWNV68uHujamEvDBqaGe2FTW19o81h1/RA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
+
 <body>
     <div class="h-screen bg-green-700">
         <div class="container max-w-[1280px] mx-auto ">
@@ -22,12 +26,15 @@
 
                         {% if request.user.is_authenticated %}
                         <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
-                        <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'myprofile' %}">Welcome, {{ request.user.username }}</a>
-                        {% else %}                      
+                        <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2"
+                            href="{% url 'myprofile' %}">Welcome, {{ request.user.username }}</a>
+                        {% else %}
 
                         <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
-                        <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'login' %}">Login</a>
-                        <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'register' %}">Register</a>
+                        <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2"
+                            href="{% url 'login' %}">Login</a>
+                        <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2"
+                            href="{% url 'register' %}">Register</a>
 
                         {% endif %}
                     </div>
@@ -35,31 +42,34 @@
             </div>
 
 
-            
+
             <div class="flex gap-[100px]">
                 <div class="text-sky-200 w-1/4 flex flex-col gap-10 pt-[200px]">
                     <div class="text-5xl font-bold">
                         <h1>Online Voting</h1>
                     </div>
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur, 
+                        <p>Lorem ipsum dolor sit amet consectetur,
                             adipisicing elit. Eum enim odio assumenda commodi, mollitia quaerat!
                         </p>
                     </div>
                     <div>
-                        <a href="{% url 'position' %}" class="border-2 border-xl rounded-3xl p-2 text-md hover:border-green-400 hover:text-white">Get Started</a>
+                        <a href="{% url 'position' %}"
+                            class="border-2 border-xl rounded-3xl p-2 text-md hover:border-green-400 hover:text-white">Get
+                            Started</a>
                     </div>
                 </div>
-    
-    
+
+
                 <div>
                     <div class="pt-[30px]">
                         <img class="w-[800px]" src="static/images/home.png" alt="">
                     </div>
                 </div>
             </div>
-                                
-        </div>      
-    </div>    
+
+        </div>
+    </div>
 </body>
+
 </html>
