--- a/voting/templates/ballot.html
+++ b/voting/templates/ballot.html
@@ -3,15 +3,17 @@
 
 <div class="col-sm-10 col-sm-offset-1">
 
-<form method="POST" id="ballotForm" action="{% url 'submit_ballot' %}">
-  {% csrf_token %}
-  {{ ballot|safe }}
-  <div class="text-center">
-    <button type="button" class="btn btn-success btn-flat" id="preview"><i
-            class="fa fa-file-text"></i> Preview</button>
-    <button type="submit" class="btn btn-primary btn-flat" name="submit_vote"><i
-            class="fa fa-check-square-o"></i> Submit</button>
+        <form method="POST" id="ballotForm" action="{% url 'submit_ballot' %}">
+                {% csrf_token %}
+                {{ ballot|safe }}
+                <div class="text-center">
+                        <button type="button"
+                                class="bg-red-600 text-white text-sm py-2 px-3 ml-2 h-10 rounded-md font-semibold outline-none focus:outline-none hover:bg-red-400"
+                                id="preview"><i class="fa fa-file-text"></i> Preview</button>
+                        <button type="submit"
+                                class="bg-green-600 text-white text-sm py-2 px-3 ml-2 h-10 rounded-md font-semibold outline-none focus:outline-none hover:bg-green-400"
+                                name="submit_vote"><i class="fa fa-check-square-o"></i> Submit</button>
+                </div>
+        </form>
 </div>
-</form>
-    </div>
 {% endblock content %}
