--- a/voting/templates/ballot.html
+++ b/voting/templates/ballot.html
@@ -6,10 +6,10 @@
 <form method="POST" id="ballotForm" action="{% url 'submit_ballot' %}">
   {% csrf_token %}
   {{ ballot|safe }}
-  <div class="text-center">
-    <button type="button" class="btn btn-success btn-flat" id="preview"><i
+  <div class="text-center gap-6 flex justify-center">
+    <button type="button" class="border-2 border-green-700 rounded-md px-2 hover:bg-green-700 hover:text-white" id="preview"><i
             class="fa fa-file-text"></i> Preview</button>
-    <button type="submit" class="btn btn-primary btn-flat" name="submit_vote"><i
+    <button type="submit" class="border-2 border-blue-500 rounded-md px-2 hover:bg-blue-500" name="submit_vote"><i
             class="fa fa-check-square-o"></i> Submit</button>
 </div>
 </form>
