--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -13,6 +13,12 @@
         <div class="w-1/3  p-5 shadow-lg bg-white rounded-md">
             <h1 class="text-3xl block text-center font-semibold">Login</h1>
             <hr class="mt-3">
+            <div class="font-bold text-green-300">
+                {% for msg in messages %}
+                    {{msg}}
+                    <br>                
+                {% endfor %}
+            </div>
             <div class="mt-2">
                 <label for="username" class="block text-base mb-2">Username</label>
                 <input type="text"
