--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -6,6 +6,11 @@
         <div class="w-1/3  p-5 shadow-lg bg-white rounded-md">
             <h1 class="text-3xl block text-center font-semibold">Register</h1>
             <hr class="mt-3">
+            <div class="font-bold text-green-500">
+                {% for msg in messages %}
+                    {{msg}}
+                {% endfor %}
+            </div>
             <div class="mt-2">
                 <label for="username" class="block text-base mb-2">Username</label>
                 {{form.username}}
