--- a/templates/home.html
+++ b/templates/home.html
@@ -1,16 +1,100 @@
-<!DOCTYPE html>
+{% extends "base.html" %}
+
+{% block content %}
+<div class="h-screen bg-[#032245] ">
+    <div class="container max-w-[1280px] mx-auto ">
+
+        <div class="flex justify-between pt-8">
+            <div class="text-white">
+                <h1 class="text-5xl font-bold w-[150px]">DUCSU</h1>
+            </div>
+            <div class="text-white">
+                <div class="flex gap-[20px]">
+
+                    {% if request.user.is_authenticated %}
+                    <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
+                    <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'myprofile' %}">Welcome, {{ request.user.username }}</a>
+                    {% else %}                      
+
+                    <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'home' %}">Home</a>
+                    <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'login' %}">Login</a>
+                    <a class="hover:bg-green-400 hover:rounded-xl hover:px-2 px-2" href="{% url 'register' %}">Register</a>
+
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+
+
+        
+        <div class="flex gap-[100px]">
+            <div class="text-sky-200 w-1/4 flex flex-col gap-10 pt-[200px]">
+                <div class="text-5xl font-bold">
+                    <h1>Online Voting</h1>
+                </div>
+                <div>
+                    <p>Voting is the expression of our commitment to ourselves, one another, this country, and this world.
+                    </p>
+                </div>
+                <div>
+                    <a href="{% url 'position' %}" class="border-2 border-xl rounded-3xl p-2 text-md hover:border-green-400 hover:text-white">Get Started</a>
+                </div>
+            </div>
+
+
+            <div>
+                <div class="pt-[5px] ">
+                    <img class="w-[800px]" src="static/images/home.png" alt="">
+                </div>
+            </div>
+        </div>
+                            
+    </div>      
+</div>
+
+<div>
+    <div class="w-[1280px] mx-auto"> 
+        <div class="flex ">
+
+            <div class="">
+                <h1>htis </h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, labore.</p>
+            </div>
+
+            <div class="">
+
+            </div>
+            <div class="">
+
+            </div>
+
+        </div>
+
+
+    </div>
+</div>
+
+{% endblock content %}
+
+
+
+
+
+
+
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    {% comment %} <link rel="stylesheet" href="style.css" type="text/css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/v4-shims.min.js" integrity="sha512-6n3X18GAJomziz6HVPbmyBOEZeoB8+unwEBTRXFs3IZTRYYCkbXNAWNV68uHujamEvDBqaGe2FTW19o81h1/RA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/v4-shims.min.js" integrity="sha512-6n3X18GAJomziz6HVPbmyBOEZeoB8+unwEBTRXFs3IZTRYYCkbXNAWNV68uHujamEvDBqaGe2FTW19o81h1/RA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
 </head>
 <body>
-    <div class="h-screen bg-green-700">
+    <div class="h-screen bg-purple-900 ">
         <div class="container max-w-[1280px] mx-auto ">
 
             <div class="flex justify-between pt-8">
@@ -53,7 +137,7 @@
     
     
                 <div>
-                    <div class="pt-[30px]">
+                    <div class="pt-[30px] ">
                         <img class="w-[800px]" src="static/images/home.png" alt="">
                     </div>
                 </div>
@@ -62,4 +146,5 @@
         </div>      
     </div>    
 </body>
-</html>
+</html> {% endcomment %}
+
