home page design

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,15 +78,15 @@
                   <span>Contact </span>
                 </a>
                 <a href="" class="hover:text-red-700">
-                  <i class="fa fa-facebook" ></i>
+                  <i class="fa-brands fa-facebook-f" ></i>
                   <span>Facebook</span>
                 </a>
                 <a href="" class="hover:text-red-700">
-                  <i class="fa fa-github" aria-hidden="true"></i>
+                  <i class="fa-brands fa-github"></i>
                   <span>GitHub</span>
                 </a>
                 <a class="hover:text-red-700" href="">
-                  <i class="fa fa-youtube"></i>
+                  <i class="fa-brands fa-youtube"></i>
                   <span >Youtube</span>
                 </a>
               </div>
@@ -97,7 +97,7 @@
             <hr class="w-[1280px] mx-auto mt-8 border">
           
           <div class="text-white w-[1280px] mx-auto flex justify-between mt-8 pb-8">
-            <p >Online voting for all</p>
+            <p class="" >Online voting Platform</p>
             
             <p >Copyright &copy; 2023 by team <span class="text-red-700 font-bold">Techtitans SAMAR</span></p>
 
