--- a/administration/templates/root.html
+++ b/administration/templates/root.html
@@ -1,13 +1,11 @@
 {% load static %}
-<!DOCTYPE html>
-<html>
 {% include 'header.html' %}
 
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition bg-blue-900 sidebar-mini mx-10">
   <div class="wrapper">
 
  {% include "navbar.html" %}
-   
+  
  {% include "sidebar.html" %}
 
 
@@ -57,7 +55,4 @@
 {% block custom_js %}
   
 {% endblock custom_js %}
-</body>
 
-
-</html>
