--- a/administration/templates/sidebar.html
+++ b/administration/templates/sidebar.html
@@ -5,11 +5,11 @@
     <!-- Sidebar user panel -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img src="{% static 'images/people.png' %}" class="img-circle" alt="User Image">
+        <img src="" class="img-circle border" alt="User Image">
       </div>
       <div class="pull-left info">
-        <p>{{ request.user.username }}</p>
-        <a><i class="fa fa-circle text-success"></i> Online</a>
+        <p class="text-white ">{{ request.user.username }}</p>
+        <a class="text-white"><i class="fa fa-circle text-success"></i> Online</a>
       </div>
     </div>
     <!-- sidebar menu: : style can be found in sidebar.less -->
@@ -17,39 +17,39 @@
       {% if request.user.username == 'admin' %}
 
       <li><a href="{% url 'adminDashboard' %}"
-                  class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold">
+                  class="text-white block py-2 px-4 hover:bg-white font-bold">
                   <i class='bx bxs-dashboard'></i> Dashboard</a></li>
 
       <li><a href="{% url 'viewPositions' %}"
-                    class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
+                    class="text-white block py-2 px-4 hover:bg-white font-bold"><i
                           class="fa fa-tasks"></i> Positions</a></li>
                           
       <li><a href="{% url 'viewCandidates' %}"
-                            class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
+                            class="text-white block py-2 px-4 hover:bg-white font-bold"><i
                                   class="fa fa-tasks"></i> Candidates</a></li>
                                   
       <li><a href="{% url 'adminViewVoters' %}"
-                                    class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
+                                    class="text-white block py-2 px-4 hover:bg-white font-bold"><i
                                           class="fa fa-tasks"></i> Voters</a></li>
 
       
-      <li><a href="{% url 'ballot_position' %}"  class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i class="fa fa-file-text"></i> <span>Ballot Position</span></a></li>
-      <li><a href="#config" class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold" data-toggle="modal"><i class="fa fa-cog"></i> <span>Election Title</span></a></li>                                    
+      <li><a href="{% url 'ballot_position' %}"  class="text-white block py-2 px-4 hover:bg-white font-bold"><i class="fa fa-file-text"></i> <span>Ballot Position</span></a></li>
+      <li><a href="#config" class="text-white block py-2 px-4 hover:bg-white font-bold" data-toggle="modal"><i class="fa fa-cog"></i> <span>Election Title</span></a></li>                                    
                                   
       {% endif %}
       <hr>
       <li><a href="{% url 'voterDashboard' %}"
-        class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
+        class="text-white block py-2 px-4 hover:bg-white font-bold"><i
               class="fa fa-dashboard"></i>Voter Dashboard</a></li>
       <li><a href="{% url 'show_ballot' %}"
-        class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
+        class="text-white block py-2 px-4 hover:bg-white font-bold"><i
               class="fa fa-dashboard"></i> <span>Show Ballot</span></a></li>
               
       <li><a href="{% url 'myprofile' %}"
-                  class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
+                  class="text-white block py-2 px-4 hover:bg-white font-bold"><i
                         class="fa fa-dashboard"></i> <span>My profile</span></a></li>
       <li><a href="{% url 'account_logout' %}"
-                  class="text-green-600 block py-2 px-4 hover:bg-green-200 font-bold"><i
+                  class="text-white block py-2 px-4 hover:bg-white font-bold"><i
                         class="fa fa-power-off"></i> <span>Logout</span></a></li>
 </ul>
   </section>
