--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 
         <div class="flex justify-between pt-8">
             <div>
-                <img class="absolute h-30 w-80 -left-4 -top-2" src="static/images/ducsu_logo.png" alt="Logo">                
+                <img class="absolute h-24 w-38" src="static/images/logo_t.png" alt="Logo">                
             </div>
             <div class="text-white">
                 <div class="flex gap-[20px] pt-4 text-white font-bold">
@@ -39,7 +39,7 @@
                     </p>
                 </div>
                 <div class="pt-5">
-                    <a href="{% url 'home' %}" class="border-2 rounded-3xl p-2 text-md hover:border-pink-500 hover:text-white">Get Started</a>
+                    <a href="{% url 'myprofile' %}" class="border-2 rounded-3xl p-2 text-md hover:border-pink-500 hover:text-white">Get Started</a>
                 </div>
             </div>
 
@@ -65,9 +65,10 @@
         </div>
         <div class="flex justify-between  text-white gap-6">
             
-            <div class="mt-12  mx-auto text-center">
+            <div class="mt-10  mx-auto text-center">
                 <div class="text-center">
-                    <img class=" h-28 mx-auto" src="static/images/poll.png" alt="">
+                    {% comment %} <img class=" h-28 mx-auto" src="static/images/poll.png" alt=""> {% endcomment %}
+                    <i class="fa-solid fa-check-to-slot mx-auto text-7xl pt-10"></i>
                 </div>
                 <h1 class="text-3xl text-center font-bold pb-2">Online Elections</h1>
                 <p>Send your voters an email with secure, single-use voting links that ensure only authorized voters can vote, once.</p>
@@ -77,7 +78,7 @@
                 <div class="texte-center">
                     <i class="fa-solid fa-square-poll-horizontal mx-auto text-7xl pt-10" ></i>
                 </div>
-                <h1 class="text-3xl font-bold pb-5">Online Polls</h1>
+                <h1 class="text-3xl font-bold pb-2">Online Polls</h1>
                 <p>Create a personalized poll that anyone can vote on, and publish it using your website, email, or social media.</p>
             </div>
 
@@ -85,7 +86,7 @@
                 <div>
                     <i class="fa-solid fa-earth-europe pt-10 text-7xl"></i>
                 </div>
-                <h1 class="text-3xl text-center font-bold pb-5">Automated Ballot Counts</h1>
+                <h1 class="text-3xl text-center font-bold pb-2">Automated Ballot Counts</h1>
                 <p>Count ranked ballots that you've already collected (using e.g., paper ballots or your own vote collection software).</p>
             </div>
         </div>
