--- a/voting/templates/voting/voter/ballot.html
+++ b/voting/templates/voting/voter/ballot.html
@@ -14,7 +14,9 @@ aria-hidden="true">&times;</button>
 
 <form method="POST" id="ballotForm" action="{% url 'submit_ballot' %}">
   {% csrf_token %}
-  {{ ballot|safe }}
+  <div class="" style="border:2px solid ; text-align:cente;">
+    {{ ballot|safe }}
+  </div>
   <div class="text-center">
     <button type="button" class="btn btn-success btn-flat" id="preview"><i
             class="fa fa-file-text"></i> Preview</button>
