--- a/administration/templates/admin/print.html
+++ b/administration/templates/admin/print.html
@@ -9,14 +9,14 @@
     <img class="h-10 w-25"  src="{% static 'images/logo_t.png' %}" alt="Logo">                
 </div>
   
-  <div class="text-center text-2xl font-weight-bold  mt-[-50px]">
-    Result
+  <div class="text-center">
+    <p class="">Result</p>
   </div>
   <table id="example1" class="">
 {% for key, value in positions.items  %} {# Loop 1 #}
-<table id="example1" class="text-center table table-bordered">
+<table id="example1" class="text-center table table-bordered text-white">
 <tr>
-  <th style="background-color: aqua;" class="text-center" colspan="3">{{ key }} | Maximum Number Of Winners : {{ value.max_vote }}</th>
+  <th style="background-color: aqua;" class="text-center bg-blue-300 text-white" colspan="3">{{ key }} | Maximum Number Of Winners : {{ value.max_vote }}</th>
   </tr>
   <tr>
   <th class="text-center" style="width: 5%;">SN</th>
