--- a/administration/templates/navbar.html
+++ b/administration/templates/navbar.html
@@ -2,7 +2,9 @@
 <header class="main-header">
   <!-- Logo -->
   <a href="{% url 'adminDashboard' %}">
-    <img class="absolute h-30 w-40"  src="{% static 'images/ducsu_logo.png' %}" alt="Logo">                
+    <div class="image">
+      <img class="absolute h-12 w-34" style="width:150px; height:150px; margin-top:-60px; margin-left:-85px ;"  src="{% static 'images/ducsu_logo.png' %}" alt="Logo">
+    </div>                
   </a>
   <!-- Header Navbar: style can be found in header.less -->
   <nav class="navbar navbar-static-top">
@@ -16,17 +18,18 @@
         <!-- User Account: style can be found in dropdown.less -->
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-            <img src="{% static 'images/people.png' %}" class="user-image" alt="User Image">
-            <span class="hidden-xs">{{ request.user.username }}</span>
+            <img src="{% url 'home' %}" class="w-12 h-12 border rounded-full" alt="Userpic">
+            <span class="hidden-xs text-white">{{ request.user.username }}</span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
-            <li class="user-header">
-              <img src="{% static 'images/people.png' %}" class="img-circle" alt="User Image">
+            <li class="use">
+              <img src="" class="img-circle" alt="User Image">
 
-              <p>
-                System Administrator                <small>Member since Mar. 2021</small>
+              <p> 
+                System Administrator <small>Member since Mar. 2021</small>
               </p>
+
             </li>
             <li class="user-footer">
               <div class="pull-left">
