--- a/administration/templates/admin/positions.html
+++ b/administration/templates/admin/positions.html
@@ -1,6 +1,12 @@
 {% extends 'root.html' %}
+
+{% block head_title %} DUCSU | Positions{% endblock %}
 {% block content %}
 <section class="content">
+
+  <div class="flex justify-center mb-2">
+    <h1 class="font-bold text-4xl text-blue-800">Positions List</h1>
+  </div>
   <div class="row">
 <div class="col-xs-12">
 <div class="box">
