--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block head_title %} DUCSU | Home{% endblock %}
+
 {% block content %}
 <div class="h-screen bg-[#032245]" >
     <div class="container max-w-[1280px] mx-auto ">
