--- a/administration/templates/admin/ballot_position.html
+++ b/administration/templates/admin/ballot_position.html
@@ -1,7 +1,13 @@
 {% extends 'root.html' %}
+
+{% block head_title %} DUCSU | Ballot Position{% endblock %}
+
 {% block content %}
 <section class="content">
-  <div class="row">
+  <div class="flex justify-center mb-2">
+    <h1 class="font-bold text-4xl text-blue-800">Ballot Position</h1>
+  </div>
+    <div class="row">
     <div class="col-xs-10 col-xs-offset-1" id="content">
     </div>
   </div>
