--- a/administration/templates/admin/candidates.html
+++ b/administration/templates/admin/candidates.html
@@ -1,6 +1,12 @@
 {% extends 'root.html' %}
+{% block head_title %} DUCSU | Candidates{% endblock %}
+
+
 {% block content %}
 <section class="content">
+  <div class="flex justify-center mb-2">
+    <h1 class="font-bold text-4xl text-blue-800">Candidates List</h1>
+  </div>
   <div class="row">
 <div class="col-xs-12">
 <div class="box">
