--- a/administration/templates/voters_home.html
+++ b/administration/templates/voters_home.html
@@ -1,8 +1,8 @@
 {% extends "root.html" %}
 
 
-{% block head_title %} DUCSU | Voter Dashboard{% endblock %}
+{% block head_title %} DUCSU | Voter Home{% endblock %}
 
 {% block content %}
-<h1 class="text-center text-3xl">Voters home page</h1>
+<h1 class="text-center text-3xl">Voter home page</h1>
 {% endblock content %}
