--- a/voting/templates/voting/voter/ballot.html
+++ b/voting/templates/voting/voter/ballot.html
@@ -1,4 +1,7 @@
 {% extends 'root.html' %}
+
+{% block head_title %} DUCSU | Voting{% endblock %}
+
 {% block content %}
 <section class="content">
   <h1 class="page-header text-center title"><b>{{ TITLE }}</b></h1>
